--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.css';
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,47 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.card {
+  border-radius: 8px;
+  padding: 10px;
+  width: 150px;
+  box-shadow: 0px 2px 2px #ccc;
+  margin: 10px;
+  display: inline-block;
+}
+
+.ant-row {
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 10px;
+  background-color: white;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+}
+
+.ant-col-12 {
+  margin-top: 25px;
+  display: inline-block;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.padding {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  padding-left: 140px;
+  padding-right: 140px;
+}
+
+.ant-layout-footer {
+  margin-top: 100px;
+  padding: 24px 50px;
+  color: rgba(0, 0, 0, 0.65);
+  font-size: 14px;
+  background: #f0f2f5;
 }
