--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@
   padding: 10px;
   width: 150px;
   box-shadow: 0px 2px 2px #ccc;
-  margin: 10px;
+  margin: 15px;
   display: inline-block;
 }
 
@@ -52,7 +52,6 @@
   margin-left: 150px;
   margin-right: 150px;
   margin-top: 10px;
-  background-color: white;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-flow: row wrap;
@@ -74,16 +73,6 @@
   padding-right: 140px;
 }
 
-.ant-layout-footer {
-  margin-top: 100px;
-  padding: 24px 50px;
-  color: rgba(0, 0, 0, 0.65);
-  font-size: 14px;
-  background: #f0f2f5;
-  display: inherit;
-}
-
-
 .footer{
   margin-top: 0;
 }
@@ -104,6 +93,12 @@
 
 .desc{
   margin: 0;
+  margin-bottom: 15px;
+}
+
+.ket{
+  margin: -5px;
+  font-size: 10px;
 }
 
 .padding-img{
