--- a/src/assets/css/LandingPage.css
+++ b/src/assets/css/LandingPage.css
@@ -15,6 +15,10 @@
   }
 }
 
+.content{
+  background-color: #ffffff;
+}
+
 .App-header {
   background-color: white;
   min-height: 100vh;
@@ -67,7 +71,7 @@
 }
 
 .padding {
-  padding-top: 80px;
+  padding-top: 20px;
   padding-bottom: 80px;
   padding-left: 140px;
   padding-right: 140px;
